# any-bench

./: .env.example  .gitignore  README.md  Taskfile.yaml  pyproject.toml
.claude/commands/: create-test-dataset.md
any_bench/: __init__.py  cli.py  judge.py  models.py  prompt.md  resume.py  runner.py  stats.py
tests/: test_judge.py  test_models.py  test_resume.py  test_runner.py  test_stats.py
tests/data/: benchmark.json
