[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "any-bench"
version = "0.1.0"
description = "CLI tool for corpus-grounded LLM benchmarking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
any-bench = "any_bench.cli:cli"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
